deploy: 564632d8dd61c3ca26ab44da9e5b92a6b2b3d812

--- a/print.html
+++ b/print.html
@@ -202,6 +202,7 @@
 <p>Open a terminal and use cargo to install ETK:</p>
 <pre><code class="language-bash">cargo install \
     --git 'https://github.com/quilt/etk' \
+    --features cli \
     etk-asm \
     etk-analyze
 </code></pre>
