--- a/print.html
+++ b/print.html
@@ -285,12 +285,17 @@ stop                # This halts execution
 <p>There are a couple other features, like macros, which will be covered in later chapters.</p>
 <h3 id="formal-syntax"><a class="header" href="#formal-syntax">Formal Syntax</a></h3>
 <p>For the language nerds, the ETK assembly language syntax is defined by the following <a href="https://pest.rs/">Pest</a> grammar:</p>
-<pre><code class="language-pest">program = _{ SOI ~ NEWLINE* ~ (stmt ~ (NEWLINE+|&quot;;&quot;))* ~ stmt? ~ EOI }
-
+<pre><code class="language-pest">///////////////////////
+// program structure //
+///////////////////////
+program = _{ SOI ~ inner ~ EOI }
+inner = _{ NEWLINE* ~ (stmt ~ (NEWLINE+|&quot;;&quot;))* ~ stmt? }
 stmt = _{ expr }
+expr = _{ label_definition | builtin | push | op }
 
-expr = _{ label_defn | inst_macro | push | op }
-
+//////////////////////
+// opcode mnemonics //
+//////////////////////
 op = @{
 	&quot;origin&quot; | &quot;stop&quot; | &quot;mulmod&quot; | &quot;mul&quot; | &quot;sub&quot; | &quot;div&quot; | &quot;sdiv&quot; | &quot;mod&quot; | &quot;smod&quot; |
 	&quot;addmod&quot; | &quot;exp&quot; | &quot;signextend&quot; | &quot;lt&quot; | &quot;gt&quot; | &quot;slt&quot; |
@@ -306,43 +311,56 @@ op = @{
 	&quot;staticcall&quot; | &quot;revert&quot; | &quot;selfdestruct&quot; | &quot;byte&quot; | &quot;chainid&quot; | &quot;selfbalance&quot; |
 	&quot;basefee&quot; | &quot;invalid&quot;
 }
-
-push = ${ &quot;push&quot; ~  word_size ~ WHITESPACE ~ numeric_argument }
+push = ${ &quot;push&quot; ~  word_size ~ WHITESPACE ~ operand }
 swap = { &quot;swap&quot; ~ half_word_size }
 dup  = { &quot;dup&quot; ~ half_word_size }
 log = { &quot;log&quot; ~ '0'..'4' }
 
-string = @{ &quot;\&quot;&quot; ~ string_char* ~ &quot;\&quot;&quot; }
-string_char = _{ &quot;\\\\&quot; | &quot;\\\&quot;&quot; | (!&quot;\\&quot; ~ !&quot;\&quot;&quot; ~ ANY) }
-
 word_size = @{ ('1'..'2' ~ '0'..'9') | (&quot;3&quot; ~ '0'..'2') | '1'..'9' }
 half_word_size = @{ (&quot;1&quot; ~ '0'..'6') | '1'..'9' }
 
-binary = @{ &quot;0b&quot; ~ ASCII_BIN_DIGIT+ }
-octal = @{ &quot;0o&quot; ~ ASCII_OCT_DIGIT+ }
-decimal = @{ ASCII_DIGIT+ }
-hex = @{ &quot;0x&quot; ~ ASCII_HEX_DIGIT ~ ASCII_HEX_DIGIT+ }
-number = _{ binary | octal | hex | decimal }
-
-selector = { &quot;selector(\&quot;&quot; ~ function_declaration ~ &quot;\&quot;)&quot; }
-function_declaration = { function_name ~ &quot;(&quot; ~ ASCII_ALPHANUMERIC* ~ (&quot;,&quot; ~ ASCII_ALPHANUMERIC+)* ~ &quot;)&quot; }
-function_name = @{ ( ASCII_ALPHA | &quot;_&quot; ) ~ ( ASCII_ALPHANUMERIC | &quot;_&quot; )* }
-
-label = @{ ASCII_ALPHA ~ (ASCII_ALPHANUMERIC | &quot;_&quot;)* }
-label_defn = { label ~ &quot;:&quot; }
-
-arguments = _{ &quot;(&quot; ~ arguments_list? ~ &quot;)&quot; }
-arguments_list = _{ ( argument ~ &quot;,&quot; )* ~ argument? }
-argument = _{ string | numeric_argument }
-numeric_argument = _{ number | selector | label }
-
-inst_macro = ${ &quot;%&quot; ~ ( import | include | include_hex | push_macro ) }
+////////////////////////
+// instruction macros //
+////////////////////////
+builtin = ${ &quot;%&quot; ~ ( import | include | include_hex | push_macro ) }
 
 import = !{ &quot;import&quot; ~ arguments }
 include = !{ &quot;include&quot; ~ arguments }
 include_hex = !{ &quot;include_hex&quot; ~ arguments }
 push_macro = !{ &quot;push&quot; ~ arguments }
 
+arguments = _{ &quot;(&quot; ~ arguments_list? ~ &quot;)&quot; }
+arguments_list = _{ ( argument ~ &quot;,&quot; )* ~ argument? }
+argument = _{ string | operand }
+
+string = @{ &quot;\&quot;&quot; ~ string_char* ~ &quot;\&quot;&quot; }
+string_char = _{ &quot;\\\\&quot; | &quot;\\\&quot;&quot; | (!&quot;\\&quot; ~ !&quot;\&quot;&quot; ~ ANY) }
+
+///////////////////////
+// expression macros //
+///////////////////////
+selector = { &quot;selector(\&quot;&quot; ~ function_declaration ~ &quot;\&quot;)&quot; }
+function_declaration = { function_name ~ &quot;(&quot; ~ ASCII_ALPHANUMERIC* ~ (&quot;,&quot; ~ ASCII_ALPHANUMERIC+)* ~ &quot;)&quot; }
+function_name = @{ ( ASCII_ALPHA | &quot;_&quot; ) ~ ( ASCII_ALPHANUMERIC | &quot;_&quot; )* }
+
+//////////////
+// operands //
+//////////////
+operand = _{ number | selector | label }
+
+number = _{ binary | octal | hex | decimal }
+
+binary = @{ &quot;0b&quot; ~ ASCII_BIN_DIGIT+ }
+octal = @{ &quot;0o&quot; ~ ASCII_OCT_DIGIT+ }
+decimal = @{ ASCII_DIGIT+ }
+hex = @{ &quot;0x&quot; ~ ASCII_HEX_DIGIT ~ ASCII_HEX_DIGIT+ }
+
+label = @{ ASCII_ALPHA ~ (ASCII_ALPHANUMERIC | &quot;_&quot;)* }
+label_definition = { label ~ &quot;:&quot; }
+
+///////////////
+// overrides //
+///////////////
 WHITESPACE = _{ &quot; &quot; | &quot;\t&quot; }
 COMMENT = _{ &quot;#&quot; ~ (!NEWLINE ~ ANY)* }
 </code></pre>
