deploy: ce9e668c8d69816d0ddf77e60056e7ea55a1f39c

--- a/ch01-cli/index.html
+++ b/ch01-cli/index.html
@@ -180,11 +180,11 @@
     --git 'https://github.com/quilt/etk' \
     --features cli \
     etk-asm \
-    etk-analyze
+    etk-dasm
 </code></pre>
 <h3 id="install-released-version"><a class="header" href="#install-released-version">Install Released Version</a></h3>
 <p>Once you have Rust and cargo installed, you just have to type this snippet in your terminal:</p>
-<pre><code class="language-bash">cargo install --features cli etk-asm etk-analyze
+<pre><code class="language-bash">cargo install --features cli etk-asm etk-dasm
 </code></pre>
 <h2 id="install-from-binaries"><a class="header" href="#install-from-binaries">Install from Binaries</a></h2>
 <p>Precompiled binaries will be provided for select platforms on a best-effort basis. Visit <a href="https://github.com/quilt/etk/releases">the releases page</a> to download the appropriate version, once we create one, for your platform.</p>
