--- a/ch02-lang/index.html
+++ b/ch02-lang/index.html
@@ -207,8 +207,7 @@ stop                # This halts execution
 ///////////////////////
 program = _{ SOI ~ inner ~ EOI }
 inner = _{ NEWLINE* ~ (stmt ~ (NEWLINE+|&quot;;&quot;))* ~ stmt? }
-stmt = _{ expr }
-expr = _{ label_definition | builtin | push | op }
+stmt = _{ label_definition | builtin | local_macro | push | op }
 
 //////////////////////
 // opcode mnemonics //
@@ -228,10 +227,10 @@ op = @{
 	&quot;staticcall&quot; | &quot;revert&quot; | &quot;selfdestruct&quot; | &quot;byte&quot; | &quot;chainid&quot; | &quot;selfbalance&quot; |
 	&quot;basefee&quot; | &quot;invalid&quot;
 }
-push = ${ &quot;push&quot; ~  word_size ~ WHITESPACE ~ operand }
-swap = { &quot;swap&quot; ~ half_word_size }
-dup  = { &quot;dup&quot; ~ half_word_size }
-log = { &quot;log&quot; ~ '0'..'4' }
+push = ${ &quot;push&quot; ~  word_size ~ WHITESPACE ~ expression }
+swap = @{ &quot;swap&quot; ~ half_word_size }
+dup  = @{ &quot;dup&quot; ~ half_word_size }
+log = @{ &quot;log&quot; ~ '0'..'4' }
 
 word_size = @{ ('1'..'2' ~ '0'..'9') | (&quot;3&quot; ~ '0'..'2') | '1'..'9' }
 half_word_size = @{ (&quot;1&quot; ~ '0'..'6') | '1'..'9' }
@@ -239,6 +238,12 @@ half_word_size = @{ (&quot;1&quot; ~ '0'..'6') | '1'..'9' }
 ////////////////////////
 // instruction macros //
 ////////////////////////
+instruction_macro_definition = { &quot;%macro&quot; ~ function_declaration ~ NEWLINE* ~ (instruction_macro_stmt ~ NEWLINE)* ~ &quot;%end&quot; }
+instruction_macro_stmt = _{ label_definition | builtin | instruction_macro | push | op }
+instruction_macro_variable = @{ &quot;$&quot; ~ function_parameter }
+instruction_macro = !{ &quot;%&quot; ~ function_invocation }
+
+local_macro = { instruction_macro_definition | instruction_macro  | expression_macro_definition }
 builtin = ${ &quot;%&quot; ~ ( import | include | include_hex | push_macro ) }
 
 import = !{ &quot;import&quot; ~ arguments }
@@ -248,7 +253,7 @@ push_macro = !{ &quot;push&quot; ~ arguments }
 
 arguments = _{ &quot;(&quot; ~ arguments_list? ~ &quot;)&quot; }
 arguments_list = _{ ( argument ~ &quot;,&quot; )* ~ argument? }
-argument = _{ string | operand }
+argument = _{ string | expression }
 
 string = @{ &quot;\&quot;&quot; ~ string_char* ~ &quot;\&quot;&quot; }
 string_char = _{ &quot;\\\\&quot; | &quot;\\\&quot;&quot; | (!&quot;\\&quot; ~ !&quot;\&quot;&quot; ~ ANY) }
@@ -256,15 +261,20 @@ string_char = _{ &quot;\\\\&quot; | &quot;\\\&quot;&quot; | (!&quot;\\&quot; ~ !
 ///////////////////////
 // expression macros //
 ///////////////////////
-selector = { &quot;selector(\&quot;&quot; ~ function_declaration ~ &quot;\&quot;)&quot; }
-function_declaration = { function_name ~ &quot;(&quot; ~ ASCII_ALPHANUMERIC* ~ (&quot;,&quot; ~ ASCII_ALPHANUMERIC+)* ~ &quot;)&quot; }
+expression_macro_definition = !{ &quot;%def&quot; ~ function_declaration ~ NEWLINE ~ expression ~ NEWLINE ~ &quot;%end&quot; }
+expression_macro = { function_invocation }
+
+selector = ${ &quot;selector(\&quot;&quot; ~ selector_function_declaration ~ &quot;\&quot;)&quot; }
+topic = ${ &quot;topic(\&quot;&quot; ~ selector_function_declaration ~ &quot;\&quot;)&quot; }
+selector_function_declaration = @{ function_name ~ &quot;(&quot; ~ function_parameter* ~ (&quot;,&quot; ~ function_parameter)* ~ &quot;)&quot; }
+function_declaration = { function_name ~ &quot;(&quot; ~ function_parameter* ~ (&quot;,&quot; ~ function_parameter)* ~ &quot;)&quot; }
+function_invocation = _{ function_name ~ &quot;(&quot; ~ expression* ~ (&quot;,&quot; ~ expression)* ~ &quot;)&quot; }
 function_name = @{ ( ASCII_ALPHA | &quot;_&quot; ) ~ ( ASCII_ALPHANUMERIC | &quot;_&quot; )* }
+function_parameter = @{ ASCII_ALPHA ~ ASCII_ALPHANUMERIC* }
 
 //////////////
 // operands //
 //////////////
-operand = _{ number | selector | label }
-
 number = _{ binary | octal | hex | decimal }
 
 binary = @{ &quot;0b&quot; ~ ASCII_BIN_DIGIT+ }
@@ -274,6 +284,18 @@ hex = @{ &quot;0x&quot; ~ ASCII_HEX_DIGIT ~ ASCII_HEX_DIGIT+ }
 
 label = @{ ASCII_ALPHA ~ (ASCII_ALPHANUMERIC | &quot;_&quot;)* }
 label_definition = { label ~ &quot;:&quot; }
+
+////////////////
+// infix math //
+////////////////
+expression = !{ term ~ (operation ~ term)* }
+term = _{ instruction_macro_variable | selector | topic | expression_macro | label | number | negative_decimal | &quot;(&quot; ~ expression ~ &quot;)&quot; }
+negative_decimal = @{ &quot;-&quot; ~ ASCII_DIGIT+ }
+operation = _{ plus | minus | times | divide }
+plus = { &quot;+&quot; }
+minus = { &quot;-&quot; }
+times = { &quot;*&quot; }
+divide = { &quot;/&quot; }
 
 ///////////////
 // overrides //
