--- a/print.html
+++ b/print.html
@@ -322,7 +322,7 @@ half_word_size = @{ (&quot;1&quot; ~ '0'..'6') | '1'..'9' }
 ////////////////////////
 // instruction macros //
 ////////////////////////
-instruction_macro_definition = { &quot;%macro&quot; ~ function_declaration ~ NEWLINE* ~ (instruction_macro_stmt ~ NEWLINE)* ~ &quot;%end&quot; }
+instruction_macro_definition = { &quot;%macro&quot; ~ function_declaration ~ NEWLINE* ~ (instruction_macro_stmt ~ NEWLINE+)* ~ &quot;%end&quot; }
 instruction_macro_stmt = _{ label_definition | &quot;%&quot; ~ push_macro | local_macro | push | op }
 instruction_macro_variable = @{ &quot;$&quot; ~ function_parameter }
 instruction_macro = !{ &quot;%&quot; ~ function_invocation }
